--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,16 @@ body{
 	font-family: 'Poppins', sans-serif;
 }
 
-
 header{
 	position: absolute;
 	z-index: 1100;
 	width: 100%;
+}
+.sticky{
+	width: 100%;
+	position: fixed;
+	background: rgba(44 44 44/100%);
+	z-index: 1200;
 }
 .logo{
 	margin-left: 20px;
@@ -43,21 +48,30 @@ header ul li a{
 
 
 
-
 .banner{
+	position: relative;
+	z-index: 1000
+}
+.banner-1{
 	padding: 80px;
 	height: 100vh;
 	background: url(../img/banner.png) center no-repeat;
 	position: relative;
-	z-index: 1000;
+	z-index: 1001;
+}
+.banner-2{
+	padding: 80px;
+	height: 100vh;
+	background: url(../img/banner2.png) center no-repeat;
+	position: relative;
+	z-index: 1001;
 }
 .banner-items{
 	position: relative;
 	z-index: 2000;
 }
 .banner-items .banner-text{
-	padding: 24% 0px;
-	padding-left: 4%;
+	padding: 18% 0px;
 }
 .banner-items .banner-text h3{
 	font-family: "Poppins", sans-serif;
@@ -546,4 +560,139 @@ header ul li a{
     font-size: 13px;
     font-weight: 400;
     color: #fff
+}
+
+
+.instagram{
+	padding-top: 180px;
+	padding-bottom: 150px;
+	text-align: center;
+}
+.instagram-items h1{
+	font-size: 50px;
+	font-weight: 500;
+	color: #001D38;
+	padding-bottom: 0;
+	margin-bottom: 70px;
+}
+
+
+
+footer{
+	background: #001D38;
+	position: relative;
+	z-index: 1000;
+}
+.footer-items .footer-top{
+	padding-top: 100px;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #334A60;
+}
+.footer-items .footer-top .footer-top-left{
+	font-size: 30px;
+	color: #fff;
+	font-weight: 500;
+	margin-bottom: 30px;
+	padding-right: 10%;
+}
+.footer-items .footer-top .footer-top-left h2{
+	line-height: 52px;
+}
+.footer-items .footer-top .footer-top-left h2 span{
+	color: #FFD35A;
+}
+.footer-items .footer-top .footer-top-left h2 span:hover{
+	text-decoration: underline;
+	transition: .3s;
+}
+.footer-items .footer-top .footer-top-right{
+	text-align: right;
+}
+.footer-items .footer-top .footer-top-right h2{
+	margin-top: 0;
+	margin-bottom: .5rem;
+	line-height: 52px;
+	color: #fff;
+	font-size: 30px;
+	font-weight: 400;
+	margin-bottom: 8px;
+}
+.footer-items .footer-top .footer-top-right h3{
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 28px;
+	color: white;
+	margin-bottom: 0px;
+}
+
+.footer-bottom{
+	padding-top: 100px;
+	padding-bottom: 129px;
+}
+.footer-bottom .foot-items h4{
+	font-size: 18px;
+	font-weight: 500;
+	color: #fff;
+	text-transform: capitalize;
+	margin-bottom: 40px;
+}
+.footer-bottom .foot-items p{
+	color: #d5d5d5!important;
+	font-size: 13px;
+	font-weight: 400;
+	line-height: 28px;
+}
+.footer-bottom .foot-items p a:hover{
+	color: #FFE8C3!important;
+}
+.footer-bottom .form-items{
+	position: relative;
+	z-index: 1200;
+	margin-bottom: 20px;
+}
+.footer-bottom .foot-items input{
+	width: 100%;
+	height: 50px;
+	background: transparent;
+	padding-left: 20px;
+	font-size: 15px;
+	color: #fff;
+	border: none;
+	border: 1px solid #334A60;
+	border-radius: 30px;
+	padding-right: 130px;
+	position: relative;
+	z-index: 1500;
+}
+.footer-bottom .foot-items button{
+	position: absolute;
+	top: 0;
+	right: 0;
+	height: 40px;
+	border: none;
+	font-size: 14px;
+	color: #001D38;
+	background: #FFE8C3;
+	padding: 10px;
+	padding: 0 22px;
+	border-radius: 30px;
+	top: 5px;
+	right: 5px;
+	font-size: 14px;
+	font-weight: 500;
+	z-index: 2000;
+}
+
+.foot-bottom{
+	text-align: center;
+	padding: 30px;
+}
+.foot-bottom p{
+	font-size: 14px;
+	color: #919191;
+	margin-bottom: 0;
+	font-weight: 400;
+}
+.foot-bottom p a{
+	color: #FFE8C3!important;
 }
